se agrego menu y modulos separado de app y hibrido

--- a/src/app/modules/tablas/pivot-view/pivot-view.component.html
+++ b/src/app/modules/tablas/pivot-view/pivot-view.component.html
@@ -1,2 +1,2 @@
 <h2>Tabla Pivot View</h2>
-<ejs-pivotview #pivotview id="PivotView" height="350" [dataSourceSettings]="dataSourceSettings"></ejs-pivotview>
+<ejs-pivotview #pivotview id="pivot-view" height="350" [dataSourceSettings]="dataSourceSettings"></ejs-pivotview>
